--- a/history.html
+++ b/history.html
@@ -52,10 +52,10 @@
 
 
         <section>
-            <div class=" p-8 shadow-md rounded-2xl">
+            <!-- <div class=" p-8 shadow-md rounded-2xl">
                 <h1 class="text-xl font-bold mb-4">96500 Taka is Donated for famine-2024 at Feni, Bangladesh</h1>
                 <p>Date : Tue Sep 17 2024 08:39:11 GMT +0600 (Bangladesh Standard Time)</p>
-            </div>
+            </div> -->
         </section>
 
 
