--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
-<body class="">
+<body  >
     <header>
         <nav class="flex flex-col lg:flex-row items-center justify-between mx-auto p-6 bg-[#F9F7F3] gap-4 lg:gap-0">
 
@@ -41,7 +41,7 @@
     </header>
 
 
-    <main class="w-11/12 mx-auto ">
+    <main  class="w-11/12 mx-auto ">
 
         <section id="duration-section">
             <div  class="flex justify-center items-center gap-5 p-7 mt-6">
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="all-section">
             <div class="container mx-auto p-4">
                 <div class="card lg:card-side bg-base-100 shadow-sm flex flex-col lg:flex-row lg:h-[450px] p-5">
 
@@ -187,6 +187,10 @@
         </section>
 
 
+<section id="history-section" style="display:none;" class="w-11/12 mx-auto mt-6">
+        
+            
+        </section>
 
 
 
@@ -194,9 +198,11 @@
 
     </main>
 
-    <footer class="p-15 mt-5 bg-[#F9F7F3]">
+    <footer class="p-15 mt-5 bg-[#F9F7F3] ">
 
     </footer>
+
+<!-- History Section -->
 
 
 
