--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section id="all-section">
-            <div class="container mx-auto p-4">
+            <div class=" mx-auto ">
                 <div class="card lg:card-side bg-base-100 shadow-sm flex flex-col lg:flex-row lg:h-[450px] p-5">
 
                     <!-- Image -->
